INDEX FIX contrast

--- a/style.css
+++ b/style.css
@@ -814,7 +814,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: #443D31;
     padding: 40px 40px 40px 40px;
 }
 
@@ -837,6 +837,7 @@ h4 {
 
 .tc-white {
     color: #F3976C!important;
+    z-index: 999;
 }
 .container_contact .col-sm-12 .text-center {
     color: black!important;
